Build OCI Image with JIB from google